# electronic-package-descriptor

./: .gitignore  README-datasheet.md  README-json.md  README-packaging.md  README.md  reformat  retest  setup.cfg
.github/workflows/: python-package.yml
src/electronic_package_descriptor/: __init__.py  commons.py  deserializer.py  groups_of_pins.py  packages.py  parser.py  pins.py  serializer.py
tests/units/: test_deserializer.py  test_group_of_pins.py  test_packages.py  test_parser.py  test_pins.py  test_serializer.py
