[metadata]
name = electronic-package-descriptor-by-sporniket
version = 0.0.2
author = Sporniket
author_email = sporniket.studio@gmail.com
description = Electronic Package Descriptor, an abstract model to describe electronic components for my generator of symbols for Kicad.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sporniket/electronic-package-descriptor
project_urls =
    Bug Tracker = https://github.com/sporniket/electronic-package-descriptor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
